<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/priority_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/low_priority"
            style="@style/StandardRadioButton"
            android:text="@string/option_low_prority" />

        <RadioButton
            android:id="@+id/medium_priority"
            style="@style/StandardRadioButton"
            android:text="@string/option_medium_priority" />

        <RadioButton
            android:id="@+id/high_priority"
            style="@style/StandardRadioButton"
            android:text="@string/option_high_priority" />
    </RadioGroup>
</LinearLayout>