<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outer_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    tools:context=".ModifyAttendeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/basic_information_loading_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView style="@style/StandardCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registration_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_registration_number"
                        android:inputType="number"
                        android:maxLength="9"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_name"
                        android:inputType="textCapWords"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.alespero.expandablecardview.ExpandableCardView
            android:id="@+id/basic_information_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:animationDuration="300"
            app:expandOnClick="true"
            app:icon="@drawable/ic_action_person"
            app:inner_view="@layout/inner_view_basic_information"
            app:startExpanded="false"
            app:title="@string/header_basic_information" />

        <com.alespero.expandablecardview.ExpandableCardView

            android:id="@+id/priority_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:animationDuration="300"
            app:expandOnClick="true"
            app:icon="@drawable/ic_action_star"
            app:inner_view="@layout/inner_view_priority"
            app:startExpanded="false"
            app:title="@string/header_priority" />

        <ProgressBar
            android:id="@+id/feedback_loading_progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <androidx.cardview.widget.CardView style="@style/StandardCardView">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/header_stall_speech_name" />

                <Spinner
                    android:id="@+id/stall_spinner"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:entries="@array/stall_list" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/disable_feedback_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checked="true"
                    android:textSize="17sp" />

                <LinearLayout
                    android:id="@+id/feedback_panel_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/regular_question_one"
                        android:textColor="@color/text_black" />

                    <com.xw.repo.BubbleSeekBar
                        android:id="@+id/seekbar_1"
                        style="@style/BubbleSeekBarEditor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/regular_question_two"
                        android:textColor="@color/text_black" />

                    <com.xw.repo.BubbleSeekBar
                        android:id="@+id/seekbar_2"
                        style="@style/BubbleSeekBarEditor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/regular_question_three"
                        android:textColor="@color/text_black" />

                    <com.xw.repo.BubbleSeekBar
                        android:id="@+id/seekbar_3"
                        style="@style/BubbleSeekBarEditor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/regular_question_four"
                        android:textColor="@color/text_black" />

                    <com.xw.repo.BubbleSeekBar
                        android:id="@+id/seekbar_4"
                        style="@style/BubbleSeekBarEditor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/regular_question_five"
                        android:textColor="@color/text_black" />

                    <com.xw.repo.BubbleSeekBar
                        android:id="@+id/seekbar_5"
                        style="@style/BubbleSeekBarEditor" />
                </LinearLayout>

                <Button
                    android:id="@+id/feedback_submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/submit" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/blacklist_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="17sp"
            android:theme="@style/SCBSwitch" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
